# clawrium

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LABELS.md  Makefile  README.md  SPEC.md  hatch_build.py  promptlog.md  pyproject.toml  security_hardening.md
.claude/: CONFIG.md  itx-config.json
.claude/commands/: skill-create.md
.claude/skills/: clm-bug-new.md  clm-bug-update.md  clm-execute.md  clm-issue-new.md  clm-issue-update.md  clm-note.md  clm-plan.md  clm-pr-status.md  clm-review-pr.md  clm-triage.md  clm-verify.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/PULL_REQUEST_TEMPLATE/: blog.md
.github/workflows/: docs.yml  publish.yml  skills-validate.yml  test.yml
.itx/11/: 00_PLAN.md  01_SCAFFOLD.md
.itx/112/: 00_PLAN.md
.itx/163/: 00_PLAN.md  01_EXECUTION.md
.itx/210/: 00_PLAN.md  02_PHASE2_PLAN.md
.itx/305/: 00_PLAN.md
.itx/308/: 00_PLAN.md
.itx/322/: 00_PLAN.md  01_EXECUTION.md
.itx/324/: 00_PLAN.md
.itx/326/: 00_PLAN.md
.itx/330/: 01_EXECUTION.md
.itx/331/: 00_PLAN.md
.itx/332/: 01_EXECUTION.md
.itx/333/: 01_EXECUTION.md
.itx/334/: 01_EXECUTION.md
.itx/344/: 00_PLAN.md
.itx/348/: 00_PLAN.md
.itx/349/: 00_PLAN.md  FOLLOWUPS.md  PROGRESS.md
.itx/356/: 01_EXECUTION.md
.itx/358/: 01_EXECUTION.md
.itx/359/: 01_EXECUTION.md
.itx/362/: 00_PLAN.md
.itx/364/: 00_PLAN.md  01_EXECUTION.md  02_PHASE0_FINDINGS.md  orchestrate-runner.sh  orchestrate-state.json
.itx/365/: 00_PLAN.md
.itx/367/: 00_PLAN.md
.itx/373/: 00_PLAN.md
.itx/376/: 00_PLAN.md  01_EXECUTION.md  orchestrate-runner.sh  orchestrate-state.json
.itx/377/: 00_PLAN.md
.itx/381/: 01_EXECUTION.md
.itx/382/: 01_EXECUTION.md
.itx/383/: 01_EXECUTION.md
.itx/384/: 01_EXECUTION.md
.itx/385/: 01_EXECUTION.md
.itx/400/: 00_PLAN.md
.itx/401/: 00_PLAN.md
.itx/402/: 01_EXECUTION.md  SOUL.md
.itx/411/: 00_PLAN.md  01_SCAFFOLD.md  02_ORCHESTRATOR.md  child-prompt.md
.itx/413/: 00_PLAN.md
.itx/422/: 00_PLAN.md
.itx/424/: 01_EXECUTION.md
.itx/430/: 00_PLAN.md  02_EXECUTE.md  03_REVIEW.md
.itx/431/: 00_PLAN.md  atx-session.json
.itx/435/: 00_PLAN.md  01_SCAFFOLD.md  audit-after.md  audit-before.md  e2e-validation.md
.itx/437/: 00_PLAN.md
.itx/448/: 00_PLAN.md  02_E2E_TEST_PLAN.md
.itx/455/: 02_EXECUTION.md
.itx/458/: 00_PLAN.md
.itx/469/: 01_EXECUTION.md  03_DEMO.md
.itx/478/: 00_PLAN.md  01_EXECUTION.md
.itx/481/: 01_EXECUTION.md  atx-session.json
.itx/482/: 01_EXECUTION.md  atx-session.json
.itx/483/: 01_EXECUTION.md  atx-session.json
.itx/491/: 01_EXECUTION.md  atx-session.json
.itx/499/: 00_PLAN.md  01_EXECUTION.md
.itx/506/: 01_EXECUTION.md  atx-session.json
.itx/507/: atx-session.json
.itx/508/: atx-session.json
.itx/509/: 02_EXECUTION.md  atx-session.json
.itx/510/: atx-session.json
.itx/524/: 01_EXECUTION.md  (+2 more)
.opencode/: opencode.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.plans/: issue-23-updated.md
.sdlc/: PLAN.md  trace.json
.spec/: CONTRIBUTING.md  status.md
blog/: 2026-05-23-hello-world.md
docs/: agent-onboarding.md  host-preparation.md  index.md  installation.md  local-skills.md
gui/: package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
scripts/: generate_provider_docs.py  install-skill-clawctl.sh  refresh_model_catalog.py  validate_skills.py
skills/: README.md
tests/: conftest.py  test_chat_ethos.py  test_chat_hermes.py  test_chat_zeroclaw.py  test_cli_agent.py  test_cli_agent_configure.py  test_cli_agent_integration_singleton.py  test_cli_agent_lifecycle.py  test_cli_agent_open.py  test_cli_agent_remove.py  test_cli_agent_skill.py  test_cli_agent_start.py  test_cli_chat.py  test_cli_chat_once.py  test_cli_gui.py  test_cli_host.py  test_cli_init.py  test_cli_install.py  test_cli_integration.py  test_cli_memory.py  test_cli_provider.py  test_cli_registry.py  test_cli_secret.py  test_cli_skill.py  test_cli_status.py  test_config.py  test_configure_claw.py  test_configure_zeroclaw.py  test_core_chat.py  test_core_integrations.py  test_core_memory.py  test_core_providers.py  test_core_providers_models.py  test_core_skills.py  test_core_skills_apply.py  test_core_skills_state.py  test_core_validation.py  test_demo_assets.py  test_deps.py  test_exec_binary_discovery.py  (+67 more)
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+1062 files in other folders)
