[project]
name = "clawrium"
version = "26.04.01"
description = "CLI tool for managing AI assistant fleets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=14.0.0",
    "ansible-runner>=2.4.0",
    "paramiko>=3.0.0",
    "pyyaml>=6.0.0",
    "packaging>=24.0",
    "requests>=2.31.0",
    "websockets>=12.0",
    "msgpack>=1.1.2",
]

[project.scripts]
clm = "clawrium.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clawrium"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Only collect tests from the tests directory, not from src
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "jinja2>=3.0.0",
]
