[project]
name = "clawrium"
version = "26.6.0"
description = "CLI tool for managing AI assistant fleets"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=14.0.0",
    # ATX #445 NW1 / iter-3 S2: pin below 3.x. `res.censored` is an
    # internal callback contract (ansible_runner/display_callback/...),
    # not a documented public API; a 3.0 rename would silently no-op the
    # bearer-leak guard with no test failure. Call sites:
    # lifecycle.py:_run_lifecycle_playbook (~L360),
    # _zeroclaw_repair_after_start (~L808),
    # configure_agent (~L1525). Bump deliberately when 3.x is vetted.
    "ansible-runner>=2.4.0,<3",
    "paramiko>=3.0.0",
    "pyyaml>=6.0.0",
    "packaging>=24.0",
    "requests>=2.31.0",
    "httpx>=0.27,<1.0",
    "websockets>=12.0",
    "msgpack>=1.1.2",
    "textual>=3.0.0,<4.0.0",
    "fuzzyfinder>=2.1.0,<3.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jsonschema>=4.17.0,<5.0.0",
    "prompt_toolkit>=3.0.43,<4.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
clawctl = "clawrium.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clawrium"]
# The staged frontend is added via force-include below. Excluding it from
# the default package traversal prevents duplicate entries in the wheel
# during sdist→wheel roundtrip builds, where the unpacked sdist exposes
# the directory to traversal as well.
exclude = ["src/clawrium/gui/frontend"]

# Bundle the in-repo skills catalog and the staged GUI frontend into
# the wheel. `src/clawrium/gui/frontend/` is a build artifact produced
# by `make build-ui` and is gitignored, so hatch's default vcs-aware
# file selection excludes it. The sdist force-include keeps the
# staged frontend in the source archive so that uv's sdist→wheel
# roundtrip can find it; the wheel force-include then rewrites it
# into the install layout. Without these, `clm gui` 404s on every
# non-API route after install (see #401).
[tool.hatch.build.targets.sdist.force-include]
"src/clawrium/gui/frontend" = "src/clawrium/gui/frontend"

[tool.hatch.build.targets.wheel.force-include]
"skills" = "clawrium/_skills"
"src/clawrium/gui/frontend" = "clawrium/gui/frontend"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Only collect tests from the tests directory, not from src
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: real-host integration tests; skipped by default. Run via `pytest -m slow`.",
    "container: parent #555 F6 render-matrix tests; require a disposable container host (CLAWRIUM_TEST_CONTAINER_HOST env var). Skipped otherwise.",
]
# Fail loudly when a `@pytest.mark.parametrize` body comes back empty —
# without this, a regression in the parametrize source (e.g.
# tests/platform/test_template_naming.py if REGISTRY_ROOT moves) would
# silently skip the parametrized cases and leave CI green. ATX #510 W4.
empty_parameter_set_mark = "fail_at_collect"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "jinja2>=3.0.0",
    "anyio>=4.0",
]
